style(merlin-www-main-navigation): correct vogue spacing for the share buttons on the follow dropdow

--- a/packages/merlin-www-main-navigation/sass/vogue/voguebase.scss
+++ b/packages/merlin-www-main-navigation/sass/vogue/voguebase.scss
@@ -287,6 +287,7 @@ a.n-main__cover__btn {
     }
 }
 .n-main__dropdown--follow__group {
+    font-size: 0;
     margin-top: $MARGIN_XX_SMALL;
 
     &:last-child {
